query_generator/dsl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    GROUP

Grammar

Rule 0     S' -> Dimensional_Model
Rule 1     Dimensional_Model -> List_Dimensional_Tables
Rule 2     List_Dimensional_Tables -> Dimensional_Table
Rule 3     List_Attr_Def -> Attr_Def
Rule 4     List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table
Rule 5     Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE
Rule 6     Dimensional_Table -> FACT ID LBRACE List_Attr_Def RBRACE
Rule 7     List_Attr_Def -> List_Attr_Def Attr_Def
Rule 8     Attr_Def -> Attr_Expression Type Alias
Rule 9     Attr_Expression -> T X
Rule 10    X -> PLUS T X
Rule 11    X -> MINUS T X
Rule 12    X -> empty_list
Rule 13    T -> F Y
Rule 14    Y -> TIMES F Y
Rule 15    Y -> DIVIDE F Y
Rule 16    Y -> empty_list
Rule 17    F -> Attr
Rule 18    F -> NUMBER
Rule 19    F -> LPAREN Attr_Expression RPAREN
Rule 20    Attr -> Table TWODOTS ID Modifier
Rule 21    Attr -> Table TWODOTS Func LPAREN ID RPAREN
Rule 22    Attr -> Table TWODOTS SUM LPAREN ID RPAREN
Rule 23    Attr -> Table TWODOTS AVG LPAREN ID RPAREN
Rule 24    Attr -> Table TWODOTS COUNT LPAREN ID RPAREN
Rule 25    Attr -> Table TWODOTS MAX LPAREN ID RPAREN
Rule 26    Attr -> Table TWODOTS MIN LPAREN ID RPAREN
Rule 27    Table -> ID
Rule 28    Table -> SELF
Rule 29    Func -> WEEKDAY
Rule 30    Func -> MONTHSTR
Rule 31    Alias -> AS ID
Rule 32    Alias -> empty
Rule 33    Type -> INT
Rule 34    Type -> STR
Rule 35    Type -> DATE
Rule 36    Type -> DATETIME
Rule 37    Type -> SERIAL
Rule 38    Type -> FLOAT
Rule 39    Type -> NUMERIC
Rule 40    Type -> empty
Rule 41    Modifier -> PK
Rule 42    Modifier -> FK TO ID DOT ID
Rule 43    Modifier -> empty
Rule 44    empty -> <empty>
Rule 45    empty_list -> <empty>

Terminals, with rules where they appear

AS                   : 31
AVG                  : 23
COUNT                : 24
DATE                 : 35
DATETIME             : 36
DIM                  : 5
DIVIDE               : 15
DOT                  : 42
FACT                 : 6
FK                   : 42
FLOAT                : 38
GROUP                : 
ID                   : 5 6 20 21 22 23 24 25 26 27 31 42 42
INT                  : 33
LBRACE               : 5 6
LPAREN               : 19 21 22 23 24 25 26
MAX                  : 25
MIN                  : 26
MINUS                : 11
MONTHSTR             : 30
NUMBER               : 18
NUMERIC              : 39
PK                   : 41
PLUS                 : 10
RBRACE               : 5 6
RPAREN               : 19 21 22 23 24 25 26
SELF                 : 28
SERIAL               : 37
STR                  : 34
SUM                  : 22
TIMES                : 14
TO                   : 42
TWODOTS              : 20 21 22 23 24 25 26
WEEKDAY              : 29
error                : 

Nonterminals, with rules where they appear

Alias                : 8
Attr                 : 17
Attr_Def             : 3 7
Attr_Expression      : 8 19
Dimensional_Model    : 0
Dimensional_Table    : 2 4
F                    : 13 14 15
Func                 : 21
List_Attr_Def        : 5 6 7
List_Dimensional_Tables : 1 4
Modifier             : 20
T                    : 9 10 11
Table                : 20 21 22 23 24 25 26
Type                 : 8
X                    : 9 10 11
Y                    : 13 14 15
empty                : 32 40 43
empty_list           : 12 16

Parsing method: LALR

state 0

    (0) S' -> . Dimensional_Model
    (1) Dimensional_Model -> . List_Dimensional_Tables
    (2) List_Dimensional_Tables -> . Dimensional_Table
    (4) List_Dimensional_Tables -> . List_Dimensional_Tables Dimensional_Table
    (5) Dimensional_Table -> . DIM ID LBRACE List_Attr_Def RBRACE
    (6) Dimensional_Table -> . FACT ID LBRACE List_Attr_Def RBRACE

    DIM             shift and go to state 4
    FACT            shift and go to state 5

    Dimensional_Model              shift and go to state 1
    List_Dimensional_Tables        shift and go to state 2
    Dimensional_Table              shift and go to state 3

state 1

    (0) S' -> Dimensional_Model .



state 2

    (1) Dimensional_Model -> List_Dimensional_Tables .
    (4) List_Dimensional_Tables -> List_Dimensional_Tables . Dimensional_Table
    (5) Dimensional_Table -> . DIM ID LBRACE List_Attr_Def RBRACE
    (6) Dimensional_Table -> . FACT ID LBRACE List_Attr_Def RBRACE

    $end            reduce using rule 1 (Dimensional_Model -> List_Dimensional_Tables .)
    DIM             shift and go to state 4
    FACT            shift and go to state 5

    Dimensional_Table              shift and go to state 6

state 3

    (2) List_Dimensional_Tables -> Dimensional_Table .

    DIM             reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)
    FACT            reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)
    $end            reduce using rule 2 (List_Dimensional_Tables -> Dimensional_Table .)


state 4

    (5) Dimensional_Table -> DIM . ID LBRACE List_Attr_Def RBRACE

    ID              shift and go to state 7


state 5

    (6) Dimensional_Table -> FACT . ID LBRACE List_Attr_Def RBRACE

    ID              shift and go to state 8


state 6

    (4) List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .

    DIM             reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)
    FACT            reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)
    $end            reduce using rule 4 (List_Dimensional_Tables -> List_Dimensional_Tables Dimensional_Table .)


state 7

    (5) Dimensional_Table -> DIM ID . LBRACE List_Attr_Def RBRACE

    LBRACE          shift and go to state 9


state 8

    (6) Dimensional_Table -> FACT ID . LBRACE List_Attr_Def RBRACE

    LBRACE          shift and go to state 10


state 9

    (5) Dimensional_Table -> DIM ID LBRACE . List_Attr_Def RBRACE
    (3) List_Attr_Def -> . Attr_Def
    (7) List_Attr_Def -> . List_Attr_Def Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    List_Attr_Def                  shift and go to state 12
    Attr_Def                       shift and go to state 13
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 10

    (6) Dimensional_Table -> FACT ID LBRACE . List_Attr_Def RBRACE
    (3) List_Attr_Def -> . Attr_Def
    (7) List_Attr_Def -> . List_Attr_Def Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    List_Attr_Def                  shift and go to state 22
    Attr_Def                       shift and go to state 13
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 11

    (27) Table -> ID .

    TWODOTS         reduce using rule 27 (Table -> ID .)


state 12

    (5) Dimensional_Table -> DIM ID LBRACE List_Attr_Def . RBRACE
    (7) List_Attr_Def -> List_Attr_Def . Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    RBRACE          shift and go to state 23
    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Def                       shift and go to state 24
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 13

    (3) List_Attr_Def -> Attr_Def .

    RBRACE          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    NUMBER          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    LPAREN          reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    ID              reduce using rule 3 (List_Attr_Def -> Attr_Def .)
    SELF            reduce using rule 3 (List_Attr_Def -> Attr_Def .)


state 14

    (8) Attr_Def -> Attr_Expression . Type Alias
    (33) Type -> . INT
    (34) Type -> . STR
    (35) Type -> . DATE
    (36) Type -> . DATETIME
    (37) Type -> . SERIAL
    (38) Type -> . FLOAT
    (39) Type -> . NUMERIC
    (40) Type -> . empty
    (44) empty -> .

    INT             shift and go to state 26
    STR             shift and go to state 27
    DATE            shift and go to state 28
    DATETIME        shift and go to state 29
    SERIAL          shift and go to state 30
    FLOAT           shift and go to state 31
    NUMERIC         shift and go to state 32
    AS              reduce using rule 44 (empty -> .)
    RBRACE          reduce using rule 44 (empty -> .)
    NUMBER          reduce using rule 44 (empty -> .)
    LPAREN          reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    SELF            reduce using rule 44 (empty -> .)

    Type                           shift and go to state 25
    empty                          shift and go to state 33

state 15

    (9) Attr_Expression -> T . X
    (10) X -> . PLUS T X
    (11) X -> . MINUS T X
    (12) X -> . empty_list
    (45) empty_list -> .

    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    INT             reduce using rule 45 (empty_list -> .)
    STR             reduce using rule 45 (empty_list -> .)
    DATE            reduce using rule 45 (empty_list -> .)
    DATETIME        reduce using rule 45 (empty_list -> .)
    SERIAL          reduce using rule 45 (empty_list -> .)
    FLOAT           reduce using rule 45 (empty_list -> .)
    NUMERIC         reduce using rule 45 (empty_list -> .)
    AS              reduce using rule 45 (empty_list -> .)
    RBRACE          reduce using rule 45 (empty_list -> .)
    NUMBER          reduce using rule 45 (empty_list -> .)
    LPAREN          reduce using rule 45 (empty_list -> .)
    ID              reduce using rule 45 (empty_list -> .)
    SELF            reduce using rule 45 (empty_list -> .)
    RPAREN          reduce using rule 45 (empty_list -> .)

    X                              shift and go to state 34
    empty_list                     shift and go to state 37

state 16

    (13) T -> F . Y
    (14) Y -> . TIMES F Y
    (15) Y -> . DIVIDE F Y
    (16) Y -> . empty_list
    (45) empty_list -> .

    TIMES           shift and go to state 39
    DIVIDE          shift and go to state 40
    PLUS            reduce using rule 45 (empty_list -> .)
    MINUS           reduce using rule 45 (empty_list -> .)
    INT             reduce using rule 45 (empty_list -> .)
    STR             reduce using rule 45 (empty_list -> .)
    DATE            reduce using rule 45 (empty_list -> .)
    DATETIME        reduce using rule 45 (empty_list -> .)
    SERIAL          reduce using rule 45 (empty_list -> .)
    FLOAT           reduce using rule 45 (empty_list -> .)
    NUMERIC         reduce using rule 45 (empty_list -> .)
    AS              reduce using rule 45 (empty_list -> .)
    RBRACE          reduce using rule 45 (empty_list -> .)
    NUMBER          reduce using rule 45 (empty_list -> .)
    LPAREN          reduce using rule 45 (empty_list -> .)
    ID              reduce using rule 45 (empty_list -> .)
    SELF            reduce using rule 45 (empty_list -> .)
    RPAREN          reduce using rule 45 (empty_list -> .)

    Y                              shift and go to state 38
    empty_list                     shift and go to state 41

state 17

    (17) F -> Attr .

    TIMES           reduce using rule 17 (F -> Attr .)
    DIVIDE          reduce using rule 17 (F -> Attr .)
    PLUS            reduce using rule 17 (F -> Attr .)
    MINUS           reduce using rule 17 (F -> Attr .)
    INT             reduce using rule 17 (F -> Attr .)
    STR             reduce using rule 17 (F -> Attr .)
    DATE            reduce using rule 17 (F -> Attr .)
    DATETIME        reduce using rule 17 (F -> Attr .)
    SERIAL          reduce using rule 17 (F -> Attr .)
    FLOAT           reduce using rule 17 (F -> Attr .)
    NUMERIC         reduce using rule 17 (F -> Attr .)
    AS              reduce using rule 17 (F -> Attr .)
    RBRACE          reduce using rule 17 (F -> Attr .)
    NUMBER          reduce using rule 17 (F -> Attr .)
    LPAREN          reduce using rule 17 (F -> Attr .)
    ID              reduce using rule 17 (F -> Attr .)
    SELF            reduce using rule 17 (F -> Attr .)
    RPAREN          reduce using rule 17 (F -> Attr .)


state 18

    (18) F -> NUMBER .

    TIMES           reduce using rule 18 (F -> NUMBER .)
    DIVIDE          reduce using rule 18 (F -> NUMBER .)
    PLUS            reduce using rule 18 (F -> NUMBER .)
    MINUS           reduce using rule 18 (F -> NUMBER .)
    INT             reduce using rule 18 (F -> NUMBER .)
    STR             reduce using rule 18 (F -> NUMBER .)
    DATE            reduce using rule 18 (F -> NUMBER .)
    DATETIME        reduce using rule 18 (F -> NUMBER .)
    SERIAL          reduce using rule 18 (F -> NUMBER .)
    FLOAT           reduce using rule 18 (F -> NUMBER .)
    NUMERIC         reduce using rule 18 (F -> NUMBER .)
    AS              reduce using rule 18 (F -> NUMBER .)
    RBRACE          reduce using rule 18 (F -> NUMBER .)
    NUMBER          reduce using rule 18 (F -> NUMBER .)
    LPAREN          reduce using rule 18 (F -> NUMBER .)
    ID              reduce using rule 18 (F -> NUMBER .)
    SELF            reduce using rule 18 (F -> NUMBER .)
    RPAREN          reduce using rule 18 (F -> NUMBER .)


state 19

    (19) F -> LPAREN . Attr_Expression RPAREN
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Expression                shift and go to state 42
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 20

    (20) Attr -> Table . TWODOTS ID Modifier
    (21) Attr -> Table . TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> Table . TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> Table . TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> Table . TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> Table . TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> Table . TWODOTS MIN LPAREN ID RPAREN

    TWODOTS         shift and go to state 43


state 21

    (28) Table -> SELF .

    TWODOTS         reduce using rule 28 (Table -> SELF .)


state 22

    (6) Dimensional_Table -> FACT ID LBRACE List_Attr_Def . RBRACE
    (7) List_Attr_Def -> List_Attr_Def . Attr_Def
    (8) Attr_Def -> . Attr_Expression Type Alias
    (9) Attr_Expression -> . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    RBRACE          shift and go to state 44
    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    Attr_Def                       shift and go to state 24
    Attr_Expression                shift and go to state 14
    T                              shift and go to state 15
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 23

    (5) Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .

    DIM             reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)
    FACT            reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)
    $end            reduce using rule 5 (Dimensional_Table -> DIM ID LBRACE List_Attr_Def RBRACE .)


state 24

    (7) List_Attr_Def -> List_Attr_Def Attr_Def .

    RBRACE          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    NUMBER          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    LPAREN          reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    ID              reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)
    SELF            reduce using rule 7 (List_Attr_Def -> List_Attr_Def Attr_Def .)


state 25

    (8) Attr_Def -> Attr_Expression Type . Alias
    (31) Alias -> . AS ID
    (32) Alias -> . empty
    (44) empty -> .

    AS              shift and go to state 46
    RBRACE          reduce using rule 44 (empty -> .)
    NUMBER          reduce using rule 44 (empty -> .)
    LPAREN          reduce using rule 44 (empty -> .)
    ID              reduce using rule 44 (empty -> .)
    SELF            reduce using rule 44 (empty -> .)

    Alias                          shift and go to state 45
    empty                          shift and go to state 47

state 26

    (33) Type -> INT .

    AS              reduce using rule 33 (Type -> INT .)
    RBRACE          reduce using rule 33 (Type -> INT .)
    NUMBER          reduce using rule 33 (Type -> INT .)
    LPAREN          reduce using rule 33 (Type -> INT .)
    ID              reduce using rule 33 (Type -> INT .)
    SELF            reduce using rule 33 (Type -> INT .)


state 27

    (34) Type -> STR .

    AS              reduce using rule 34 (Type -> STR .)
    RBRACE          reduce using rule 34 (Type -> STR .)
    NUMBER          reduce using rule 34 (Type -> STR .)
    LPAREN          reduce using rule 34 (Type -> STR .)
    ID              reduce using rule 34 (Type -> STR .)
    SELF            reduce using rule 34 (Type -> STR .)


state 28

    (35) Type -> DATE .

    AS              reduce using rule 35 (Type -> DATE .)
    RBRACE          reduce using rule 35 (Type -> DATE .)
    NUMBER          reduce using rule 35 (Type -> DATE .)
    LPAREN          reduce using rule 35 (Type -> DATE .)
    ID              reduce using rule 35 (Type -> DATE .)
    SELF            reduce using rule 35 (Type -> DATE .)


state 29

    (36) Type -> DATETIME .

    AS              reduce using rule 36 (Type -> DATETIME .)
    RBRACE          reduce using rule 36 (Type -> DATETIME .)
    NUMBER          reduce using rule 36 (Type -> DATETIME .)
    LPAREN          reduce using rule 36 (Type -> DATETIME .)
    ID              reduce using rule 36 (Type -> DATETIME .)
    SELF            reduce using rule 36 (Type -> DATETIME .)


state 30

    (37) Type -> SERIAL .

    AS              reduce using rule 37 (Type -> SERIAL .)
    RBRACE          reduce using rule 37 (Type -> SERIAL .)
    NUMBER          reduce using rule 37 (Type -> SERIAL .)
    LPAREN          reduce using rule 37 (Type -> SERIAL .)
    ID              reduce using rule 37 (Type -> SERIAL .)
    SELF            reduce using rule 37 (Type -> SERIAL .)


state 31

    (38) Type -> FLOAT .

    AS              reduce using rule 38 (Type -> FLOAT .)
    RBRACE          reduce using rule 38 (Type -> FLOAT .)
    NUMBER          reduce using rule 38 (Type -> FLOAT .)
    LPAREN          reduce using rule 38 (Type -> FLOAT .)
    ID              reduce using rule 38 (Type -> FLOAT .)
    SELF            reduce using rule 38 (Type -> FLOAT .)


state 32

    (39) Type -> NUMERIC .

    AS              reduce using rule 39 (Type -> NUMERIC .)
    RBRACE          reduce using rule 39 (Type -> NUMERIC .)
    NUMBER          reduce using rule 39 (Type -> NUMERIC .)
    LPAREN          reduce using rule 39 (Type -> NUMERIC .)
    ID              reduce using rule 39 (Type -> NUMERIC .)
    SELF            reduce using rule 39 (Type -> NUMERIC .)


state 33

    (40) Type -> empty .

    AS              reduce using rule 40 (Type -> empty .)
    RBRACE          reduce using rule 40 (Type -> empty .)
    NUMBER          reduce using rule 40 (Type -> empty .)
    LPAREN          reduce using rule 40 (Type -> empty .)
    ID              reduce using rule 40 (Type -> empty .)
    SELF            reduce using rule 40 (Type -> empty .)


state 34

    (9) Attr_Expression -> T X .

    INT             reduce using rule 9 (Attr_Expression -> T X .)
    STR             reduce using rule 9 (Attr_Expression -> T X .)
    DATE            reduce using rule 9 (Attr_Expression -> T X .)
    DATETIME        reduce using rule 9 (Attr_Expression -> T X .)
    SERIAL          reduce using rule 9 (Attr_Expression -> T X .)
    FLOAT           reduce using rule 9 (Attr_Expression -> T X .)
    NUMERIC         reduce using rule 9 (Attr_Expression -> T X .)
    AS              reduce using rule 9 (Attr_Expression -> T X .)
    RBRACE          reduce using rule 9 (Attr_Expression -> T X .)
    NUMBER          reduce using rule 9 (Attr_Expression -> T X .)
    LPAREN          reduce using rule 9 (Attr_Expression -> T X .)
    ID              reduce using rule 9 (Attr_Expression -> T X .)
    SELF            reduce using rule 9 (Attr_Expression -> T X .)
    RPAREN          reduce using rule 9 (Attr_Expression -> T X .)


state 35

    (10) X -> PLUS . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    T                              shift and go to state 48
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 36

    (11) X -> MINUS . T X
    (13) T -> . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    T                              shift and go to state 49
    F                              shift and go to state 16
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 37

    (12) X -> empty_list .

    INT             reduce using rule 12 (X -> empty_list .)
    STR             reduce using rule 12 (X -> empty_list .)
    DATE            reduce using rule 12 (X -> empty_list .)
    DATETIME        reduce using rule 12 (X -> empty_list .)
    SERIAL          reduce using rule 12 (X -> empty_list .)
    FLOAT           reduce using rule 12 (X -> empty_list .)
    NUMERIC         reduce using rule 12 (X -> empty_list .)
    AS              reduce using rule 12 (X -> empty_list .)
    RBRACE          reduce using rule 12 (X -> empty_list .)
    NUMBER          reduce using rule 12 (X -> empty_list .)
    LPAREN          reduce using rule 12 (X -> empty_list .)
    ID              reduce using rule 12 (X -> empty_list .)
    SELF            reduce using rule 12 (X -> empty_list .)
    RPAREN          reduce using rule 12 (X -> empty_list .)


state 38

    (13) T -> F Y .

    PLUS            reduce using rule 13 (T -> F Y .)
    MINUS           reduce using rule 13 (T -> F Y .)
    INT             reduce using rule 13 (T -> F Y .)
    STR             reduce using rule 13 (T -> F Y .)
    DATE            reduce using rule 13 (T -> F Y .)
    DATETIME        reduce using rule 13 (T -> F Y .)
    SERIAL          reduce using rule 13 (T -> F Y .)
    FLOAT           reduce using rule 13 (T -> F Y .)
    NUMERIC         reduce using rule 13 (T -> F Y .)
    AS              reduce using rule 13 (T -> F Y .)
    RBRACE          reduce using rule 13 (T -> F Y .)
    NUMBER          reduce using rule 13 (T -> F Y .)
    LPAREN          reduce using rule 13 (T -> F Y .)
    ID              reduce using rule 13 (T -> F Y .)
    SELF            reduce using rule 13 (T -> F Y .)
    RPAREN          reduce using rule 13 (T -> F Y .)


state 39

    (14) Y -> TIMES . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    F                              shift and go to state 50
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 40

    (15) Y -> DIVIDE . F Y
    (17) F -> . Attr
    (18) F -> . NUMBER
    (19) F -> . LPAREN Attr_Expression RPAREN
    (20) Attr -> . Table TWODOTS ID Modifier
    (21) Attr -> . Table TWODOTS Func LPAREN ID RPAREN
    (22) Attr -> . Table TWODOTS SUM LPAREN ID RPAREN
    (23) Attr -> . Table TWODOTS AVG LPAREN ID RPAREN
    (24) Attr -> . Table TWODOTS COUNT LPAREN ID RPAREN
    (25) Attr -> . Table TWODOTS MAX LPAREN ID RPAREN
    (26) Attr -> . Table TWODOTS MIN LPAREN ID RPAREN
    (27) Table -> . ID
    (28) Table -> . SELF

    NUMBER          shift and go to state 18
    LPAREN          shift and go to state 19
    ID              shift and go to state 11
    SELF            shift and go to state 21

    F                              shift and go to state 51
    Attr                           shift and go to state 17
    Table                          shift and go to state 20

state 41

    (16) Y -> empty_list .

    PLUS            reduce using rule 16 (Y -> empty_list .)
    MINUS           reduce using rule 16 (Y -> empty_list .)
    INT             reduce using rule 16 (Y -> empty_list .)
    STR             reduce using rule 16 (Y -> empty_list .)
    DATE            reduce using rule 16 (Y -> empty_list .)
    DATETIME        reduce using rule 16 (Y -> empty_list .)
    SERIAL          reduce using rule 16 (Y -> empty_list .)
    FLOAT           reduce using rule 16 (Y -> empty_list .)
    NUMERIC         reduce using rule 16 (Y -> empty_list .)
    AS              reduce using rule 16 (Y -> empty_list .)
    RBRACE          reduce using rule 16 (Y -> empty_list .)
    NUMBER          reduce using rule 16 (Y -> empty_list .)
    LPAREN          reduce using rule 16 (Y -> empty_list .)
    ID              reduce using rule 16 (Y -> empty_list .)
    SELF            reduce using rule 16 (Y -> empty_list .)
    RPAREN          reduce using rule 16 (Y -> empty_list .)


state 42

    (19) F -> LPAREN Attr_Expression . RPAREN

    RPAREN          shift and go to state 52


state 43

    (20) Attr -> Table TWODOTS . ID Modifier
    (21) Attr -> Table TWODOTS . Func LPAREN ID RPAREN
    (22) Attr -> Table TWODOTS . SUM LPAREN ID RPAREN
    (23) Attr -> Table TWODOTS . AVG LPAREN ID RPAREN
    (24) Attr -> Table TWODOTS . COUNT LPAREN ID RPAREN
    (25) Attr -> Table TWODOTS . MAX LPAREN ID RPAREN
    (26) Attr -> Table TWODOTS . MIN LPAREN ID RPAREN
    (29) Func -> . WEEKDAY
    (30) Func -> . MONTHSTR

    ID              shift and go to state 53
    SUM             shift and go to state 55
    AVG             shift and go to state 56
    COUNT           shift and go to state 57
    MAX             shift and go to state 58
    MIN             shift and go to state 59
    WEEKDAY         shift and go to state 60
    MONTHSTR        shift and go to state 61

    Func                           shift and go to state 54

state 44
